# whispering

./: Cargo.toml  README.md  config.example.toml  config.toml.example  flake.nix  result
.github/workflows/: update-dependencies.yml
nix/: common.nix  darwin.nix  linux-wayland.nix  linux-x11.nix  package.nix  udev.nix
nix/udev/: 99-whispering.rules
src/: app.rs  asr.rs  audio.rs  config.rs  error.rs  keyboard.rs  lib.rs  logging.rs  main.rs  whisper.rs
src/audio/: mod.rs  push_to_talk.rs  resample.rs
src/audio/vad/: mod.rs  silero.rs
