[package]
name = "whispering"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5", features = ["derive"] }
cpal = "0.15.3"
dirs = "6.0.0"
env_logger = "0.11.8"
hf-hub = { version = "0.4.2", features = ["tokio"] }
hound = "3.5.1"
log = "0.4.27"
rdev = { git = "https://github.com/Narsil/rdev", features =["wayland"], rev = "2b6ca5bc87be7cbcee7960179d426c80b1eecf26" }
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "blocking"] }
samplerate = "0.2.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1.44.2", features = ["full"] }
whisper-rs = { git = "https://github.com/Narsil/whisper-rs.git", features = ["cuda"], rev = "171471d2b3615f54a1f6c87d70ee88f54b1126a9" }


[features]
jack = ["cpal/jack"]

[dev-dependencies]
tempfile = "3.8"

