[package]
name = "whispering"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5", features = ["derive"] }
cpal = "0.15.3"
dirs = "6.0.0"
env_logger = "0.11.8"
hf-hub = { version = "0.4.2", default-features = false, features = ["tokio", "default-tls"] }
hound = "3.5.1"
log = "0.4.27"
notify-rust = "4.10.0"
rdev = { git = "https://github.com/Narsil/rdev", rev = "c77b4e5456301cfa7f2226020f2a58f2f8d77c5d" , default-features=false, features=["serialize", "wayland"]}
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
toml = "0.8"
tokio = { version = "1.44.2", features = ["full"] }
whisper-rs = { git = "https://github.com/Narsil/whisper-rs.git", rev = "171471d2b3615f54a1f6c87d70ee88f54b1126a9" }
samplerate = "0.2.4"
rubato = "0.16.2"
arboard = { version = "3.5.0" }
wl-clipboard-rs = { version = "0.9.2", optional = true }
ringbuf = "0.4.8"
ndarray = "0.16.1"
ort = {version = "2.0.0-rc.9", default-features = false, features=["ndarray", "half"] }


[features]
jack = ["cpal/jack"]
cuda = ["whisper-rs/cuda", "ort/cuda"]
metal = ["whisper-rs/metal", "ort/coreml"]
wayland = ["rdev/wayland", "wl-clipboard-rs"]
x11 = ["rdev/x11"]

[dev-dependencies]
tempfile = "3.8"

